Table users {
  id varchar(5) [primary key]
  username varchar
  email varchar
  hashed_password varchar
  created_at timestamp
  updated_at timestamp
}

Table items {
  id integer [primary key]
  name varchar
  description text
  price float
  stock integer
  picture_path varchar
  tags varchar
  created_at timestamp
  updated_at timestamp
}

Table carts {
  id integer [primary key]
  user_id varchar(5)
  session_id varchar
  created_at timestamp
  updated_at timestamp
}

Table cart_items {
  id integer [primary key]
  cart_id integer
  item_id integer
  quantity integer
}

Table orders {
  id integer [primary key]
  user_id varchar(5)
  total_amount float
  status varchar
  created_at timestamp
  updated_at timestamp
}

Table order_items {
  id integer [primary key]
  order_id integer
  item_id integer
  quantity integer
  price float
}

Ref: carts.user_id > users.id // many-to-one
Ref: cart_items.cart_id > carts.id // many-to-one
Ref: cart_items.item_id > items.id // many-to-one
Ref: orders.user_id > users.id // many-to-one
Ref: order_items.order_id > orders.id // many-to-one
Ref: order_items.item_id > items.id // many-to-one
